--- a/index.css
+++ b/index.css
@@ -1,6 +1,15 @@
-#root,
-body,
-html {
+html, body, #root {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
+}
+
+body {
+  min-height: 100vh;
+  overflow-x: hidden;
+}
+
+#root {
+  min-height: 100vh;
 }
